// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots common/ActionButton Basic 1`] = `
<div>
  <button
    aria-label="Some label"
    class="MuiButtonBase-root MuiIconButton-root"
    tabindex="0"
    title="Some label"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <span />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Storyshots common/ActionButton Large And Colorful 1`] = `
<div>
  <button
    aria-label="Some label"
    class="MuiButtonBase-root MuiIconButton-root"
    tabindex="0"
    title="Some label"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <span />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Storyshots common/ActionButton Long Description 1`] = `
<div>
  <button
    aria-label="Some label"
    class="MuiButtonBase-root MuiIconButton-root"
    tabindex="0"
    title="Although this is Some label, there is more to it than meets the eye."
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <span />
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
